--- a/app/src/main/res/layout/activity_post_new_event.xml
+++ b/app/src/main/res/layout/activity_post_new_event.xml
@@ -51,7 +51,9 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/colorPrimary"
                         android:textStyle="bold"
-                        android:text="Name" />
+                        android:text="Name"
+                        android:focusable="false"
+                        android:focusableInTouchMode="false"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="0dp"
@@ -88,7 +90,9 @@
                         android:layout_height="wrap_content"
                         android:textStyle="bold"
                         android:textColor="@color/colorPrimary"
-                        android:text="Blood Group" />
+                        android:text="Blood Group"
+                        android:focusable="false"
+                        android:focusableInTouchMode="false"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="0dp"
@@ -125,7 +129,9 @@
                         android:layout_height="wrap_content"
                         android:textStyle="bold"
                         android:textColor="@color/colorPrimary"
-                        android:text="Location" />
+                        android:text="Location"
+                        android:focusable="false"
+                        android:focusableInTouchMode="false"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="0dp"
@@ -175,7 +181,9 @@
                         android:layout_height="wrap_content"
                         android:textStyle="bold"
                         android:textColor="@color/colorPrimary"
-                        android:text="Phone Number" />
+                        android:text="Phone Number"
+                        android:focusable="false"
+                        android:focusableInTouchMode="false"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="0dp"
@@ -212,7 +220,9 @@
                         android:layout_height="wrap_content"
                         android:textStyle="bold"
                         android:textColor="@color/colorPrimary"
-                        android:text="Date of Birth" />
+                        android:text="Date of Birth"
+                        android:focusable="false"
+                        android:focusableInTouchMode="false"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="0dp"
