--- a/app/src/main/res/layout/list_notifications.xml
+++ b/app/src/main/res/layout/list_notifications.xml
@@ -9,12 +9,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@drawable/textview_border_not_curve"
             >
 
                 <TextView
