--- a/app/src/main/res/layout/activity_post_new_event.xml
+++ b/app/src/main/res/layout/activity_post_new_event.xml
@@ -101,7 +101,7 @@
                     android:layout_gravity="center"
                     >
 
-                    <com.google.android.material.textfield.TextInputEditText
+                    <Spinner
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textStyle="bold"
