Added address picker.

--- a/app/src/main/res/layout/activity_post_new_event.xml
+++ b/app/src/main/res/layout/activity_post_new_event.xml
@@ -157,7 +157,7 @@
                         android:layout_height="match_parent"
                         style="@style/StyleButton"
                         android:layout_weight="4"
-                        android:text="Map"
+                        android:text="Pick"
                         android:textSize="15dp" />
 
                 </LinearLayout>
