--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -68,4 +68,19 @@
         android:text="Log In">
     </com.google.android.material.button.MaterialButton>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"></LinearLayout>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/login_button_forgotpass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#FFFFFF"
+        android:textColor="@color/colorPrimary"
+        app:cornerRadius="11dp"
+        android:layout_gravity="center_horizontal"
+        android:text="Forgot Password">
+    </com.google.android.material.button.MaterialButton>
 </LinearLayout>
