--- a/app/src/main/res/layout/list_people_who_responded.xml
+++ b/app/src/main/res/layout/list_people_who_responded.xml
@@ -9,22 +9,68 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="100dp"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:weightSum="6"
             android:background="@drawable/textview_border_not_curve">
 
-            <TextView
-                android:id="@+id/peoplewhoresponded_text_responses"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                android:textColor="@color/colorPrimary" />
+                android:layout_weight="2.5"
+                android:background="@drawable/textview_border_not_curve">
+                <TextView
+                    android:id="@+id/peoplewhoresponded_text_responses"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/colorPrimary" />
+             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="3.5"
+                android:orientation="vertical"
+                android:weightSum="4"
+                android:background="@drawable/textview_border_not_curve">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2">
+                    <com.google.android.material.button.MaterialButton
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        style="@style/StyleButton"
+                        android:layout_margin="5dp"
+                        android:layout_gravity="center_horizontal"
+                        android:text="CALL">
+                    </com.google.android.material.button.MaterialButton>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2">
+                    <com.google.android.material.button.MaterialButton
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        style="@style/StyleButton"
+                        android:layout_margin="5dp"
+                        android:layout_gravity="center_horizontal"
+                        android:text="ENLIST">
+                    </com.google.android.material.button.MaterialButton>
+                </LinearLayout>
+
+            </LinearLayout>
 
         </LinearLayout>
     </LinearLayout>
