--- a/app/src/main/res/layout/activity_show_post_location.xml
+++ b/app/src/main/res/layout/activity_show_post_location.xml
@@ -80,7 +80,7 @@
         android:layout_marginTop="15dp"
         android:scaleType="centerCrop"
         android:visibility="invisible"
-        android:src="@drawable/ic_tic" />
+        android:src="@drawable/ic_check" />
 
 
 </RelativeLayout>
