--- a/app/src/main/res/layout/activity_enlisted_people.xml
+++ b/app/src/main/res/layout/activity_enlisted_people.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EnlistedPeople">
+    tools:context=".EnlistedPeople"
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerviewenlistedpeople"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="2dp"></androidx.recyclerview.widget.RecyclerView>
+
+
+</LinearLayout>
